[tool.poetry]
name = "f1tenth-vision"
version = "0.1.0"
description = ""
authors = ["Chris Klammer <cklammer@andrew.cmu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"
pytorch-lightning = "^2.1.2"
opencv-python = "^4.8.1.78"
tensorboard = "^2.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
